--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^4.1.6"
   },
