--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Express App Generated via ps-express-generator",
   "main": "bin/www",
   "scripts": {
-    "start": "nodemon bin/www"
+    "start": "nodemon bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
@@ -20,5 +21,11 @@
   "devDependencies": {
     "nodemon": "^2.0.11",
     "prettier": "^2.3.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
